# data-systems

./: .clippy.toml  .codespellrc  .commitlintrc.yaml  .dockerignore  .editorconfig  .env.sample  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.toml  .rustfmt.toml  .taplo.toml  .typos.toml  .yamlfix.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Fuel Data-Systems Rest Api.postman_collection.json  LICENSE  Makefile  Makefile.toml  README.md  Tiltfile  bacon.toml  bunfig.toml  clippy.toml  codespell  commited.toml  committed.toml  justfile  knope.toml  package-lock.json  package.json  pnpm-lock.yaml  release-plz.toml  rust-toolchain.toml  tarpaulin.toml
benches/bench-consumers/: Cargo.toml  README.md
benches/data-parser/: Cargo.toml  README.md
benches/data-parser/benches/: deserialize.rs  deserialize_decompress.rs  serialize.rs  serialize_compress.rs
benches/data-parser/src/: lib.rs
benches/load-tester/: Cargo.toml  README.md
benches/load-tester/benches/: load-test.rs
benches/load-tester/src/: main.rs
benches/nats-publisher/: Cargo.toml  README.md
benches/nats-publisher/src/: main.rs
benchs/bench-consumers/: Cargo.toml  README.md
benchs/bench-consumers/benches/: consumers.rs
benchs/bench-consumers/src/: lib.rs  main.rs
benchs/data-parser/: Cargo.toml  README.md
benchs/data-parser/benches/: deserialize.rs  deserialize_decompress.rs  serialize.rs  serialize_compress.rs
benchs/data-parser/src/: lib.rs
benchs/nats-publisher/: Cargo.toml
benchs/nats-publisher/config/: nats.conf
benchs/nats-publisher/src/: lib.rs  main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs  types.rs
crates/data-parser/: Cargo.toml  README.md
crates/data-parser/benches/: deserialize.rs  deserialize_decompress.rs  parser.rs  serialize.rs  serialize_compress.rs
crates/data-parser/src/: builder.rs  error.rs  lib.rs  parser.rs  types.rs
crates/domains/: Cargo.toml  README.md
crates/domains/migrations/: 20250105033516_create_blocks_table.sql  20250108203444_create_transactions_table.sql  20250108203637_create_inputs_table.sql  20250108204045_create_outputs_table.sql  20250108204242_create_utxos_table.sql  20250108204327_create_receipts_table.sql  20250320204420_create_predicates_table.sql  20250320205218_add_blob_on_transactions_table.sql  20250507192856_create_messages.sql  20250608000000_update_cursor_padding.sql
crates/domains/src/: lib.rs  msg_payload.rs  queryable.rs  subject_payload.rs  subjects.rs
crates/fuel-core-nats/: Cargo.toml  README.md  nats.conf
crates/fuel-core-nats/src/: lib.rs  main.rs  nats.rs
crates/fuel-data-parser/: Cargo.toml  README.md
crates/fuel-data-parser/src/: builder.rs  compression_strategies.rs  error.rs  lib.rs  parser.rs  types.rs
crates/fuel-db-utils/: Cargo.toml
crates/fuel-db-utils/src/: cli.rs  lib.rs
crates/fuel-indexer/: Cargo.toml
crates/fuel-indexer/src/: main.rs
crates/fuel-message-broker/: Cargo.toml
crates/fuel-message-broker/src/: lib.rs  msg_broker.rs  nats.rs  nats_metrics.rs  nats_opts.rs
crates/fuel-networks/: Cargo.toml
crates/fuel-networks/src/: lib.rs
crates/fuel-streams-core/: Cargo.toml  README.md  build.rs
crates/fuel-streams-core/src/: fuel_core_like.rs  fuel_core_types.rs  lib.rs  primitive_types.rs  stream.rs  stream_encoding.rs  subjects.rs  types.rs
crates/fuel-streams-domains/: Cargo.toml
crates/fuel-streams-domains/src/: lib.rs  msg_payload.rs  subject_payload.rs  subjects.rs
crates/fuel-streams-executors/: Cargo.toml
crates/fuel-streams-executors/src/: blocks.rs  inputs.rs  lib.rs  logs.rs  outputs.rs  receipts.rs  transactions.rs  utxos.rs
crates/fuel-streams-macros/: Cargo.toml  README.md
crates/fuel-streams-macros/src/: lib.rs  validator.rs
crates/fuel-streams-macros/subject-derive/: Cargo.toml  README.md
crates/fuel-streams-macros/tests/: subject-derive.rs
crates/fuel-streams-nats/: Cargo.toml
crates/fuel-streams-nats/src/: error.rs  lib.rs  nats_client.rs  nats_client_opts.rs  nats_namespace.rs  types.rs
crates/fuel-streams-protobuf/: Cargo.toml
crates/fuel-streams-protobuf/src/: fueltypes.rs  lib.rs
crates/fuel-streams-publisher/: Cargo.toml  README.md  build.rs  config.toml  nats.conf
crates/fuel-streams-publisher/proto/: fuel_streamer.proto
crates/fuel-streams-publisher/src/: blocks.rs  cli.rs  elastic.rs  fuel_core.rs  identifiers.rs  inputs.rs  lib.rs  logs.rs  main.rs  metrics.rs  nats.rs  outputs.rs  packets.rs  predicates.rs  publisher.rs  publisher_shutdown.rs  receipts.rs  server.rs  shutdown.rs  state.rs  system.rs  transactions.rs  utxos.rs
crates/fuel-streams-storage/: Cargo.toml
crates/fuel-streams-storage/src/: lib.rs  retry.rs  storage.rs  storage_config.rs
crates/fuel-streams-store/: Cargo.toml
crates/fuel-streams-store/migrations/: 20250105033516_create_blocks_table.sql  20250105033516_create_records_table.sql  20250108203444_create_transactions_table.sql  20250108203637_create_inputs_table.sql  20250108204045_create_outputs_table.sql  20250108204242_create_utxos_table.sql  20250108204327_create_receipts_table.sql  20250108206432_create_api_keys.sql
crates/fuel-streams-types/: Cargo.toml
examples/: Cargo.toml  blocks.rs  inputs.rs  logs.rs  messages.rs  multiple-streams.rs  outputs.rs  predicates.rs  receipts.rs  subscribe_mult.rs  transactions.rs  utxos.rs  websockets.rs
examples/client/: Cargo.toml
examples/publisher/: Cargo.toml
examples/streams/: Cargo.toml
messaging/: .gitignore  Cargo.toml  README.md  build.rs  conversions.ts  fuel_block.json  package-lock.json  package.json  pnpm-lock.yaml  protobuftypes.ts  rustfmt.toml  test-borsh.ts  test-protobuf.ts  tsconfig.json  tslint.json
messaging/proto/: fuel_types.proto  protobuftypes.proto
messaging/src/: lib.rs  main.rs  mocktypes.rs  protobuftypes.rs
messaging/tests/: borsh.rs  lib.rs  prost.rs
tests/: Cargo.toml
tests/src/: fuel_core_helpers.rs  lib.rs  main.rs  streams_builder.rs
tests/tests/: client.rs  conn.rs  lib.rs  publisher.rs  store.rs  stream.rs  streams.rs
(+1115 files in other folders)
