[workspace]
default-members = ["crates/fuel-streams"]
members = [
  "benches/*",
  "crates/*",
  "crates/subject/subject-derive",
  "examples",
  "scripts/generate-api-keys",
  "scripts/subjects-schema",
  "scripts/update-db",
  "services/*",
  "tests",
]
resolver = "2"

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "data-stream"]
license = "Apache-2.0"
repository = "https://github.com/fuellabs/data-systems"
rust-version = "1.85.1"
version = "0.0.28"

[workspace.dependencies]
anyhow = "1.0.97"
async-nats = "0.39.0"
async-stream = "0.3.6"
async-trait = "0.1.87"
axum = { version = "0.8.1", features = ["json", "ws", "query"] }
bincode = "2.0.1"
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive", "env"] }
dashmap = { version = "6.1.0", features = ["serde"] }
derive_more = { version = "2.0.1", features = [
  "is_variant",
  "display",
  "from_str",
] }
displaydoc = "0.2.5"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
indexmap = { version = "2.8.0", features = ["serde"] }
moka = { version = "0.12.10", features = ["sync"] }
num_cpus = "1.16.0"
pretty_assertions = "1.4.1"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", default-features = false, features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
test-case = "3.3.1"
thiserror = "2.0.12"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.44.1", features = [
  "io-util",
  "macros",
  "rt-multi-thread",
  "test-util",
] }
tokio-stream = "0.1.17"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = [
  "fs",
  "cors",
  "trace",
  "compression-full",
  "decompression-full",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "local-time",
  "env-filter",
] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "time"] }

# Fuel Core dependencies
fuel-core = { version = "0.42.0", default-features = false, features = [
  "p2p",
  "relayer",
  "rocksdb",
] }
fuel-core-bin = { version = "0.42.0", default-features = false, features = [
  "p2p",
  "relayer",
  "rocksdb",
] }
fuel-core-client = { version = "0.42.0", default-features = false, features = [
  "std",
] }
fuel-core-importer = { version = "0.42.0" }
fuel-core-poa = { version = "0.42.0", default-features = false }
fuel-core-services = { version = "0.42.0", default-features = false }
fuel-core-storage = { version = "0.42.0" }
fuel-core-txpool = { version = "0.42.0" }
fuel-core-types = { version = "0.42.0", default-features = false, features = [
  "serde",
  "std",
] }
fuel-tx = { version = "0.60.0" }
fuel-vm = { version = "0.60.0" }

# Internal dependencies
fuel-data-parser = { version = "0.0.28", path = "crates/data-parser" }
fuel-message-broker = { version = "0.0.28", path = "crates/message-broker" }
fuel-streams = { version = "0.0.28", path = "crates/fuel-streams" }
fuel-streams-core = { version = "0.0.28", path = "crates/core" }
fuel-streams-domains = { version = "0.0.28", path = "crates/domains" }
fuel-streams-subject = { version = "0.0.28", path = "crates/subject" }
fuel-streams-test = { version = "0.0.22", path = "crates/test" }
fuel-streams-types = { version = "0.0.28", path = "crates/types" }
fuel-web-utils = { version = "0.0.28", path = "crates/web-utils" }
subject-derive = { version = "0.0.28", path = "crates/subject/subject-derive" }

# Workspace projects
[workspace.metadata.cargo-machete]
ignored = ["anyhow", "fuel-core", "fuel-tx", "fuel-vm", "tokio"]

[profile.release]
codegen-units = 1
incremental = false
debug = 0
lto = "thin"
opt-level = 3
panic = 'abort'
strip = true

[profile.dev]
incremental = true
lto = false
opt-level = 0
split-debuginfo = "unpacked"
