[workspace]
members = [
    "crates/*",
    "services/*",
]
resolver = "2"

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2024"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "data-stream"]
license = "Apache-2.0"
repository = "https://github.com/fuellabs/data-systems"
rust-version = "1.90.0"
version = "0.0.34"

[workspace.dependencies]
anyhow = "1.0.97"
apache-avro = { version = "0.17.0", features = ["derive"] }
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = [
    "is_variant",
    "display",
    "from_str",
] }
displaydoc = "0.2.5"
dotenvy = "0.15.7"

# Fuel Core dependencies
fuel-core = { version = "0.47.1", default-features = false }
fuel-core-client = { version = "0.47.1", default-features = false }
fuel-core-services = { version = "0.47.1", default-features = false }
fuel-core-types = { version = "0.47.1", default-features = false, features = [
    "serde",
    "std",
] }

# Internal dependencies
fuel-data-parser = { version = "0.0.34", path = "crates/data-parser" }
fuel-streams-domains = { version = "0.0.34", path = "crates/domains" }
fuel-streams-types = { version = "0.0.34", path = "crates/types" }
fuel-web-utils = { version = "0.0.34", path = "crates/web-utils" }
hex = "0.4.3"
pretty_assertions = "1.4.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.3", default-features = false, features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "test-util",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "local-time",
    "env-filter",
] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "time"] }

# Workspace projects
[workspace.metadata.cargo-machete]
ignored = ["anyhow", "fuel-core", "tokio", "serde_bytes"]

[profile.release]
codegen-units = 1
incremental = false
debug = 0
lto = "thin"
opt-level = 3
panic = 'abort'
strip = true

[profile.dev]
incremental = true
lto = false
opt-level = 0
split-debuginfo = "unpacked"
