[package]
name = "fuel-streams-examples"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
fuel-streams = { workspace = true, features = ["test-helpers"] }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[example]]
name = "blocks"
path = "blocks.rs"

[[example]]
name = "transactions"
path = "transactions.rs"

[[example]]
name = "receipts"
path = "receipts.rs"

[[example]]
name = "inputs"
path = "inputs.rs"

[[example]]
name = "outputs"
path = "outputs.rs"

[[example]]
name = "utxos"
path = "utxos.rs"

[[example]]
name = "logs"
path = "logs.rs"
