[package]
name = "fuel-streams-examples"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
fuel-streams = { workspace = true, features = ["test-helpers"] }
futures.workspace = true
tokio.workspace = true

[[example]]
name = "blocks"
path = "blocks.rs"

[[example]]
name = "transactions"
path = "transactions.rs"

[[example]]
name = "receipts"
path = "receipts.rs"

[[example]]
name = "inputs"
path = "inputs.rs"

[[example]]
name = "outputs"
path = "outputs.rs"

[[example]]
name = "utxos"
path = "utxos.rs"


[[example]]
name = "subscribe_mult"
path = "subscribe_mult.rs"
