[package]
name = "fuel-streams-test"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false

[[test]]
harness = true
name = "integration_tests"
path = "tests/lib.rs"

[features]
test-helpers = []

[dependencies]
anyhow = { workspace = true }
fuel-core = { workspace = true, features = [
  "p2p",
  "relayer",
  "smt",
  "test-helpers",
  "wasm-executor",
] }
fuel-core-client = { workspace = true, features = [
  "subscriptions",
  "test-helpers",
] }
fuel-core-types = { workspace = true, features = [
  "serde",
  "std",
  "test-helpers",
] }
fuel-message-broker = { workspace = true, features = ["test-helpers"] }
fuel-streams-core = { workspace = true, features = ["test-helpers"] }
fuel-streams-domains = { workspace = true, features = ["test-helpers"] }
fuel-streams-macros = { workspace = true, features = ["test-helpers"] }
fuel-streams-store = { workspace = true, features = ["test-helpers"] }
fuel-streams-types = { workspace = true, features = ["test-helpers"] }
fuel-web-utils = { workspace = true, features = ["test-helpers"] }
futures.workspace = true
rand.workspace = true
serde_json.workspace = true
sv-consumer = { path = "../crates/sv-consumer", features = ["test-helpers"] }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "test-util",
] }

[dev-dependencies]
mockall = "0.13.1"
pretty_assertions = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["fuel-streams-macros"]
