[package]
name = "data-parser"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[[bench]]
harness = false               # do not use the default harness test
name = "serialize"
path = "benches/serialize.rs"

[[bench]]
harness = false                 # do not use the default harness test
name = "deserialize"
path = "benches/deserialize.rs"

[[bench]]
harness = false                        # do not use the default harness test
name = "serialize_compress"
path = "benches/serialize_compress.rs"

[[bench]]
harness = false                            # do not use the default harness test
name = "deserialize_decompress"
path = "benches/deserialize_decompress.rs"

[dependencies]
fuel-data-parser.workspace = true
fuel-streams-domains.workspace = true
rand.workspace = true
strum.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
