[package]
name = "load-tester"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
fuel-streams = { workspace = true }
fuel-streams-core = { workspace = true, features = ["bench-helpers"] }
futures = { workspace = true }
statrs = "0.18.0"
tokio = { workspace = true }
