[package]
name = "load-tester"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
fuel-streams = { workspace = true, features = ["test-helpers"] }
fuel-streams-core = { workspace = true, features = ["test-helpers"] }
fuel-streams-store = { workspace = true, features = ["test-helpers"] }
futures.workspace = true
statrs = "0.18.0"
tokio.workspace = true
