[package]
name = "bench-consumers"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
publish = false

[[bench]]
name = "consumers"
harness = false
path = "benches/consumers.rs"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
chrono = "0.4.38"
fuel-core-types = { workspace = true }
fuel-data-parser = { path = "../../crates/fuel-data-parser" }
futures = { workspace = true }
nats-publisher = { path = "../nats-publisher" }
statrs = "0.17.1"
tokio = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
