[package]
name = "data-parser"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
publish = false

[[bench]]
name = "serialize"
harness = false               # do not use the default harness test
path = "benches/serialize.rs"

[[bench]]
name = "deserialize"
harness = false                 # do not use the default harness test
path = "benches/deserialize.rs"

[[bench]]
name = "serialize_compress"
harness = false                        # do not use the default harness test
path = "benches/serialize_compress.rs"

[[bench]]
name = "deserialize_decompress"
harness = false                            # do not use the default harness test
path = "benches/deserialize_decompress.rs"

[dependencies]
async-compression = { version = "0.4.11", features = ["all"] }
fuel-core-types = { workspace = true }
fuel-data-parser = { path = "../../crates/fuel-data-parser", features = ["test-helpers"] }
rand = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
