[package]
name = "nats-publisher"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
bincode = "1.3.3"
bytes = "1.6.0"
chrono = "0.4.38"
clap = { workspace = true }
fuel-core = { workspace = true }
fuel-core-bin = { workspace = true }
fuel-core-client = { workspace = true }
fuel-core-services = { workspace = true }
fuel-core-types = { workspace = true }
fuel-data-parser = { path = "../../crates/fuel-data-parser" }
fuel-streams-core = { path = "../../crates/fuel-streams-core" }
futures-util = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
