[package]
name = "nats-publisher"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
clap = { workspace = true }
fuel-core = { workspace = true }
fuel-core-bin = { workspace = true }
fuel-core-services = { workspace = true }
fuel-core-storage = { workspace = true }
fuel-core-types = { workspace = true }
fuel-data-parser = { path = "../../crates/fuel-data-parser" }
fuel-streams-core = { path = "../../crates/fuel-streams-core" }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
