[package]
name = "fuel-streams-core"
description = "Core components for working with streams of Fuel blockchain data"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
openapi = ["utoipa/axum_extras"]
test-helpers = [
    "fuel-core/test-helpers",
    "fuel-message-broker/test-helpers",
    "fuel-streams-domains/test-helpers",
    "fuel-streams-subject/test-helpers",
    "fuel-streams-types/test-helpers",
]

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
async-stream.workspace = true
dotenvy.workspace = true
fuel-core.workspace = true
fuel-data-parser.workspace = true
fuel-message-broker.workspace = true
fuel-streams-domains.workspace = true
fuel-streams-subject.workspace = true
fuel-streams-types.workspace = true
fuel-web-utils = { workspace = true, features = ["test-helpers"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true
