[package]
name = "data_parser"
authors = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bench]]
name = "serialize"
harness = false  # do not use the default harness test
path = "benches/serialize.rs"

[[bench]]
name = "deserialize"
harness = false  # do not use the default harness test
path = "benches/deserialize.rs"

[[bench]]
name = "serialize_compress"
harness = false  # do not use the default harness test
path = "benches/serialize_compress.rs"

[[bench]]
name = "deserialize_decompress"
harness = false  # do not use the default harness test
path = "benches/deserialize_decompress.rs"

[dependencies]
anyhow = { workspace = true }

# compression
async-compression = { version = "0.4.11", features = ["all"] }
async-nats = { workspace = true }
async-trait = { workspace = true }
bincode = "1.3.3"

# ser/deser
bytes = "1.6.0"

# displaydoc
displaydoc = "0.2"
dotenvy = { workspace = true }
fuel-core = { workspace = true }
fuel-core-types = { workspace = true }
futures-util = { workspace = true }

paste = "1.0.15"
postcard = "1.0.8"
prost = "0.13.1"
rand = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
