[package]
name = "fuel-streams-domains"
description = "Domains definitions for fuel streams"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
derive_more.workspace = true
fuel-asm = "0.60.0"
fuel-core.workspace = true
fuel-core-types.workspace = true
fuel-streams-store.workspace = true
fuel-streams-subject.workspace = true
fuel-streams-types.workspace = true
fuel-tx.workspace = true
fuel-vm.workspace = true
fuels-core = "0.71.0"
hex.workspace = true
rayon.workspace = true
sea-query = "0.32.2"
serde.workspace = true
serde_json.workspace = true
serde_with = "3.12.0"
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
anyhow.workspace = true
pretty_assertions.workspace = true
serde_urlencoded.workspace = true
test-case.workspace = true

[features]
default = []
test-helpers = [
  "fuel-core-types/test-helpers",
  "fuel-core/test-helpers",
  "fuel-streams-store/test-helpers",
  "fuel-streams-types/test-helpers",
]
