[package]
name = "fuel-streams-domains"
description = "Domains definitions for fuel streams"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
test-helpers = [
    "fuel-core-types/test-helpers",
    "fuel-core/test-helpers",
    "fuel-streams-types/test-helpers",
]

[dependencies]
anyhow = "1"
chrono.workspace = true
derive_more.workspace = true
fuel-core.workspace = true
fuel-core-types.workspace = true
fuel-data-parser.workspace = true
fuel-streams-types.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utoipa.workspace = true

[dev-dependencies]
anyhow.workspace = true
pretty_assertions.workspace = true
